syntax="proto3";
option go_package="github.com/Sean04111/chat_gRPC";
package chat;
message User{
  int64 id = 1;
  string name = 2;
}
message UserId{
  int64 id =1;
}
message Message{
  int64 id = 1;
  string speakername=2;
  string content =3;
}
message NotiCode{
  int64 code = 1;
}
service Chat{
  rpc SendAll(Message )returns(Message);
  rpc HaveAll(UserId)returns(Message);
}
service Notify{
  rpc Notify(UserId)returns(stream NotiCode);
}